--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "material-ui": "^0.15.4",
     "react": "^15.0.2",
     "react-dom": "^15.0.1",
+    "react-highcharts": "^10.0.0",
+    "react-motion": "^0.4.5",
     "react-redux": "^4.4.5",
+    "react-swipeable-views": "^0.7.8",
     "react-tap-event-plugin": "^1.0.0",
+    "react-throttle-render": "^1.2.0",
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
     "redux-concatenate-reducers": "^1.0.0",
