--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-swipeable-views": "^0.7.8",
     "react-tap-event-plugin": "^1.0.0",
     "react-throttle-render": "^1.2.0",
+    "react-tooltip": "^3.2.2",
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
     "redux-concatenate-reducers": "^1.0.0",
