--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "dependencies": {
     "babel-polyfill": "^6.8.0",
+    "json-loader": "^0.5.4",
     "material-ui": "^0.15.4",
-    "react": "^15.0.2",
+    "react": "^15.3.2",
     "react-dom": "^15.0.1",
     "react-highcharts": "^10.0.0",
     "react-motion": "^0.4.5",
     "react-redux": "^4.4.5",
     "react-swipeable-views": "^0.7.8",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "react-throttle-render": "^1.2.0",
     "react-tooltip": "^3.2.2",
     "redux": "^3.5.2",
